<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000fff"
    tools:context=".JTest" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv"
        android:layout_gravity="center"
        android:textSize="40sp"
        
         />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:textSize="20sp"
        
         />
    
    <EditText 
        android:layout_width="fill_parent"
		android:background="#ffffff"
		android:layout_height="wrap_content"
		android:inputType="text"
	        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:textSize="20sp"
         />
    <EditText 
        android:layout_width="fill_parent"
		android:background="#ffffff"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
	        />
    <Button
         android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:text="@string/b1"
        android:textSize="20sp"
        android:onClick="login"
        />
  </LinearLayout>
